Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "xzsoftware/wykopsdk",
-    "description": "SDK dla Api v2 Wykopu",
+    "name": "AlvarezCasarez/wykopsdk",
+    "description": "Fork of xzsoftware/wykopsdk SDK dla Api v2 Wykopu",
     "type": "library",
     "keywords": ["wykop", "sdk", "wykopsdk", "wykopapi", "api"],
     "require": {
